--- a/package.json
+++ b/package.json
@@ -1,45 +1,26 @@
 {
-  "name": "friendo",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "artsly-backend",
+  "version": "1.0.0",
+  "description": "backend",
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "@react-oauth/google": "^0.12.1",
-    "@reduxjs/toolkit": "^2.6.0",
-    "@tailwindcss/vite": "^4.0.8",
-    "axios": "^1.10.0",
-    "cookie-session": "^2.1.0",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "mongoose": "^8.11.0",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.2.0",
-    "tailwind-scrollbar-hide": "^2.0.0",
-    "tailwindcss": "^4.0.8"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.0",
+    "multer": "^2.0.2",
+    "nodemon": "^3.1.10",
+    "validator": "^13.15.15"
   }
 }
